changes from adding my blueprint baseline plugin

--- a/css/screen.css
+++ b/css/screen.css
@@ -263,3 +263,7 @@ hr.space {background:#fff;color:#fff;visibility:hidden;}
 .clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
 .clearfix, .container {display:block;}
 .clear {clear:both;}
+
+/* baseline */
+html {font-size:100.01%;}
+body {font-size:100.01%;}
